--- a/package.json
+++ b/package.json
@@ -8,16 +8,21 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
-    "axios": "^1.7.2",
-    "bootstrap": "^5.3.2",
-    "core-js": "^3.30.1",
-    "vue": "^3.3.4",
-    "vue-axios": "^3.4.1",
-    "vue-router": "^4.2.5",
     "@vuelidate/core": "^2.0.0",
-    "@vuelidate/validators": "^2.0.0"
+    "@vuelidate/validators": "^2.0.0",
+    "ax": "^0.2.2",
+    "axios": "^1.10.0",
+    "bootstrap": "^5.3.7",
+    "bootstrap-vue": "^2.23.1",
+    "bootstrap-vue-3": "^0.5.1",
+    "core-js": "^3.30.1",
+    "vue": "^3.5.16",
+    "vue-axios": "^3.5.2",
+    "vue-router": "^4.5.1",
+    "vuelidate": "^0.7.7"
   },
   "devDependencies": {
+    "@babel/eslint-parser": "^7.27.5",
     "@vue/cli-plugin-babel": "~5.0.8",
     "@vue/cli-plugin-eslint": "~5.0.8",
     "@vue/cli-service": "~5.0.8",
